Revision history for C and Perl extension of nfdump.

1.25 2016-07-xx
	-c: some leaks in memheap removed
	-c: added new API function lnf_mem_clean(lnf_mem_t *lnf_mem)
	-c: added exmaple lnf_ex11_memclean.c

1.24 2016-06-21
	-perl: better thread testing (with more detailed results)

1.23 2016-06-20
	-c: fixed build on FreeBSD

1.22 2016-06-18
	-c: adjusted to nfdump-1.6.15

1.21 2016-05-28
	-nffdump: invalid mutex initialisation 

1.20 2016-05-09
	-removed several warnings 
	-c: new field LNF_FLD_INET_FAMILY containing either AF_INET or AF_INET6
	-perl: new field inetfamily 
	-perl: new function family2txt and txt2family 
	-nfdumpp: removed bug where nfdumpp produces corupted output file 
	-nfdumpp: added -n option to limit aggregated outputs 

1.19 2016-02-03
	-perl: removed dependency on lbz 

1.18 2016-01-29
	-perl: new variables $flow->{NUM_OF_FIELDS} and $flow->{NAME} can be accesed 
	       Zangerl, Report #110170)
	-c: adjusted to nfdump-1.6.14
	-c: two new lnf_open flags LNF_COMP_LZO and LNF_COMP_BZ2
	-c: two new info options LNF_INFO_LZO_COMPRESSED and LNF_INFO_BZ2_COMPRESSED
	-c: new ./configure option to build with static or dynam BZ2 support
	-c: separation of new filter code. The new filter can also be used in 
		other projects (include/ffliter.h and src/ffiltler,
		thank to Lukas Hutak for cooperation). 
	-c: removed memory leak in lnf_lookup_map and lnf_close (tnaks for Lukas
	    Hutak)
	-c: fixed size of some fields (patch submitted by Lukas Hutak)
	-c: API change - tha value of LNF_AGGR_KEY is 0x0008
	-c: API change - new LNF_AGGR_AUTO for autodetection of aggregation mode
	-nfdumpp: new -w and -o options 
	-nfdumpp: new modular output system 
	-nfdumpp: invalid dispaly of duration field 
	-nfdumpp: multiple outputs when multiple -A switch is used 
	          Examples: 
	           nfdumpp -R DIR -A proto -O bytes -A srcvlan -O bps
	           nfdumpp -R DIR -A ip -O pkts -A port -O bytes -A proto 