@@ -4,6 +4,8 @@ Revision history for C and Perl extension of nfdump.
 	-c: some leaks in memheap removed
 	-c: added new API function lnf_mem_clean(lnf_mem_t *lnf_mem)
 	-c: added exmaple lnf_ex11_memclean.c
+	-perl: added new test 53-libnf-filter.t
+	-nfdumpp: handles properly error messages for libnf filter
 
 1.24 2016-06-21
 	-perl: better thread testing (with more detailed results)
